2006-07-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #335276
	* gui/dialogs/event-editor.c: (event_editor_edit_comp):
	Set the meeting time in the time selector.
	* gui/dialogs/schedule-page.c: (schedule_page_set_meeting_time):
	* gui/dialogs/schedule-page.h: Added a function to set the meeting
	time in the time selector.

2006-07-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #344927
	* gui/dialogs/event-page.c: 
	(event_page_fill_widgets): Set the classification.
				   
2006-07-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #323499
	* gui/dialogs/recurrence-page.c: (interval_selection_done_cb),
	(ending_selection_done_cb), (init_widgets): Listen to the
	changed signal from the GtkOptionMenu.

2006-07-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #323499
	* gui/dialogs/recurrence-page.c: (interval_selection_done_cb),
	(ending_selection_done_cb), (init_widgets): Listen to the
	changed signal from the GtkOptionMenu.

2006-07-31  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #345646
	* gui/dialogs/recurrence-page.c: 
	(recurrence_page_finalize): Diconnect the signal handler
	while destroying the page.

2006-06-17   Arvind <sa.phoenix@gmail.com>

	** Fix for bug#330633

	* gui/dialogs/event-page.c : Enabled save button when the timezone
	  is changed from an existing meeting/appointment

	* gui/e-timezone-entry.c : prevented the shrinking of the timezone
	field when the timezone is set to the default timezone

2006-07-11  Arvind_evo <sa.phoenix@gmail.com>
  	 
	* gui/dialogs/event-page.c: Enabled save button when the group is
	changed from a previously saved meeting.
 
2006-07-11  Li Yuan <li.yuan@sun.com>

	* gui/e-week-view.c: (e_week_view_remove_event_cb):
	remove week_view->comp_data first, since garray is not thread
	safe and the event's address may be changed.
	Fix for #345969.

2006-07-11  Li Yuan	<li.yuan@sun.com>

	* gui/dialogs/event-page.c: (sensitize_widgets):
	* gui/dialogs/event-page.glade: